TPLUNLIMITED-35 #comment removing element unnecessary of intro img and fixing alignment of items blog

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1424,6 +1424,7 @@ div {
 			float: none;
 			margin-left: 0;
 			padding: 15px 10px;
+			vertical-align: top;
 
 			&:first-child{
 				border-left: 0;
@@ -1483,49 +1484,106 @@ div {
 	.items-leading {
 		border-bottom: 1px solid @color_three;
 		[class*="leading-"]{
-			.clearfix();
 			padding-bottom: 15px;
 			padding-top: 15px;
-			> h2{
-				margin: 0 0 15px;
+
+			> [class*="float-"]{
+				display: table-row;
+				> .article-image,
+				> .article-content{
+					display: table-cell;
+					vertical-align: top;
+				}
+
+				> .article-image{
+					width: 30%;
+					.img-intro-left,
+					.img-intro-right{
+						float: none;
+					}
+				}
+
+				> .article-content{
+					width: 70%;
+				}
 			}
+
 		}
 	}
-	.items-row {
-		.item{
-			> h2{
-				margin: 0 0 15px;
-			}
-		}
-	}
+
 	.items-row,
 	.items-leading {
+		display: table;
+
 		.item,
 		[class*="leading-"]{
-			> h2{
-				line-height: 1.9rem;
-				a{
-					color: @black;
-					padding-right: 55px;
-					position: relative;
 
-					&:hover,
-					&:focus{
-						color: @color_one;
-						text-decoration: none;
-					}
-					&:after{
-						content: "\f105";
-						font-family: FontAwesome;
-						font-size: 45px;
-						height: 45px;
-						line-height: 45px;
-						position: absolute;
-						right: 0;
-						top: 0;
+			> [class*="float-"]{
+				> .article-content{
+					> h2{
+						.font-size(1.3);
+						line-height: 1.9rem;
+						margin: 0 0 15px;
+						a{
+							color: @black;
+							padding-right: 55px;
+							position: relative;
+
+							&:hover,
+							&:focus{
+								color: @color_one;
+								text-decoration: none;
+							}
+							&:after{
+								content: "\f105";
+								font-family: FontAwesome;
+								font-size: 45px;
+								height: 45px;
+								line-height: 45px;
+								position: absolute;
+								right: 0;
+								top: -2px;
+							}
+						}
 					}
 				}
 			}
+
+
+		}
+
+		.item{
+
+			&.span6,
+			&.span4,
+			&.span3{
+				> [class*="float-"]{
+					> .article-content{
+						> h2{
+							a{
+								display: block;
+							}
+						}
+					}
+				}
+			}
+			&.span3{
+				> [class*="float-"]{
+					> .article-content{
+						> h2{
+							font-size: 17px;
+						}
+					}
+				}
+			}
+
+			> .float-left,
+			> .float-right{
+				> .article-image{
+					max-width: 40%;
+				}
+			}
+
 		}
 	}
 }
